[package]
name = "contractdiff"
version = "1.0.0"
edition = "2021"
authors = ["Wasin Thonkaew <wasin@wasin.io>"]
description = "Commandline program to output color-diff of contract code between two contract addresses. Suitable to use against non-verified contract code for analysis."
repository = "https://github.com/haxpor/contractdiff"
license = "MIT"
keywords = ["contract", "contract-address", "diff", "crypto", "blockchain"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
similar = "2.1.0"
console = "0.15.0"
hex = "0.4.3"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
regex = "1.5.5"
clap = { version = "3.1.15", features = ["derive"] }
